--- a/index.html
+++ b/index.html
@@ -51,3 +51,81 @@
 
     select, input {
         margin: 5px 0;
+        padding: 8px;
+        border-radius: 4px;
+        border: none;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="container">
+    <h1>The Meal Plan</h1>
+    <h3>By: Aren Jake Bautista</h3>
+
+    <!-- SIGNUP FORM -->
+    <div id="form-container">
+      <form id="signup-form" class="form">
+        <h2>Sign Up</h2>
+        <input type="text" id="signup-username" placeholder="Username" required />
+        <input type="password" id="signup-password" placeholder="Password" required />
+        <button type="submit">Sign Up</button>
+        <p>Already have an account? <a href="#" id="show-login">Login</a></p>
+      </form>
+
+      <!-- LOGIN FORM -->
+      <form id="login-form" class="form hidden">
+        <h2>Login</h2>
+        <input type="text" id="login-username" placeholder="Username" required />
+        <input type="password" id="login-password" placeholder="Password" required />
+        <button type="submit">Login</button>
+        <p>Don't have an account? <a href="#" id="show-signup">Sign Up</a></p>
+      </form>
+    </div>
+
+    <!-- MEAL PLAN SECTION -->
+    <div id="meal-plan" class="hidden">
+      <h2>Your Healthy Meal Plan</h2>
+
+      <label for="day">Day:</label>
+      <select id="day">
+        <option>Monday</option>
+        <option>Tuesday</option>
+        <option>Wednesday</option>
+        <option>Thursday</option>
+        <option>Friday</option>
+        <option>Saturday</option>
+        <option>Sunday</option>
+      </select>
+
+      <label for="breakfast">Breakfast:</label>
+      <select id="breakfast">
+        <option>Egg & Toast</option>
+        <option>Fruit Salad</option>
+        <option>Oatmeal</option>
+      </select>
+
+      <label for="lunch">Lunch:</label>
+      <select id="lunch">
+        <option>Grilled Chicken</option>
+        <option>Vegetable Pasta</option>
+        <option>Fish & Rice</option>
+      </select>
+
+      <label for="dinner">Dinner:</label>
+      <select id="dinner">
+        <option>Soup & Bread</option>
+        <option>Stir Fry Veggies</option>
+        <option>Steamed Fish</option>
+      </select>
+
+      <button id="save">Save Meal</button>
+      <button id="logout">Logout</button>
+    </div>
+
+  </div>
+
+  <!-- LINK JAVASCRIPT -->
+  <script src="script.js"></script>
+</body>
+</html>
